--- a/_sips/sips/2014-06-27-42.type.md
+++ b/_sips/sips/2014-06-27-42.type.md
@@ -3,7 +3,7 @@ layout: sip
 discourse: true
 title: SIP-23 - Literal-based singleton types
 
-vote-status: pending
+vote-status: completed 
 permalink: /sips/:title.html
 ---
 
